--- a/squid-block.conf
+++ b/squid-block.conf
@@ -13,10 +13,13 @@ logfile_rotate 7
 sslcrtd_program /usr/lib/squid/security_file_certgen -s /var/cache/squid/ssl_db -M 4MB
 sslcrtd_children 5
 
-# HTTP interception
+# Forward-proxy port for Squid's internal URLs (not exposed via NAT)
+http_port 3128
+
+# HTTP transparent interception
 http_port 3129 intercept
 
-# HTTPS interception with SSL splice
+# HTTPS transparent interception with SSL splice
 https_port 3130 intercept ssl-bump \
     cert=/etc/squid/cert.pem \
     key=/etc/squid/key.pem
